# text-editor

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  buildeditor.sh  buildkeylogger.sh  editor.py  example.txt  keylogger.c  notes.txt  run.sh  runvalgrind.sh  session
include/: list.h
source/: buffer.c  buffer.h  editor  editor.c  editor.h  example.txt  keylogger.c  list.c  list.h  main.c  main2.c  map.c  map.h  notes.txt
src/: .editor.c.swp  __main__.py  buffer.py  editor  editor.c  editor.py  linkedlist.py  notes.txt  piecetable.py  suggestionlist.py
test/: main.c  test.h
tests/: test.c  test.h  test_main.c
text-editor/: __init__.py  __main__.py
